fixed variable name

--- a/Transformer_SeqClass_HyperParamSearch.ipynb
+++ b/Transformer_SeqClass_HyperParamSearch.ipynb
@@ -207,7 +207,7 @@
     "name of file with ModelConfig object\n",
     "path to folder with modelconfig\n",
     "\"\"\"\n",
-    "file_modelconfig = \"ModelConfig_\" + _base_model + \"_\" + _dataset_name + \"_\" + timestamp + \".pkl\"\n",
+    "file_modelconfig = \"ModelConfig_\" + _base_model + \"_\" + _dataset_name_local + \"_\" + timestamp + \".pkl\"\n",
     "path_file_modelconfig = os.path.join(path_cwd, \"modelconfigs\", file_modelconfig)\n",
     "\n",
     "\"\"\"\n",
