Added Language Specific Versions, changes to utility file so that multi dataset downloads are possible, small changes to naming conventions

--- a/Transformer_SeqClass_FinalTraining.ipynb
+++ b/Transformer_SeqClass_FinalTraining.ipynb
@@ -131,11 +131,13 @@
     "in order to be compatible with the Trainer API\n",
     "\"\"\"\n",
     "base_model = model_config.base_model\n",
+    "# for saving name in model config we need to make sure that there is no '/' in _base_model\n",
+    "base_model_altered = re.sub(r'/', '___', base_model)\n",
     "\n",
     "\"\"\"\n",
     "Directory Paths:\n",
     "\"\"\"\n",
-    "path_final_training =  os.path.join(path_cwd , \"training_data\" , base_model, \"final_training\" + \"_\" + timestamp)\n",
+    "path_final_training =  os.path.join(path_cwd , \"training_data\" , base_model_altered, \"final_training\" + \"_\" + timestamp)\n",
     "model_config.path_final_training = path_final_training\n",
     "\n",
     "\"\"\"\n",
@@ -200,7 +202,7 @@
     "\"\"\"\n",
     "path to folder with trained model\n",
     "\"\"\"\n",
-    "path_trained_model = os.path.join(path_cwd, \"trained_models\", base_model + \"_\" + timestamp)\n",
+    "path_trained_model = os.path.join(path_cwd, \"trained_models\", base_model_altered + \"_\" + timestamp)\n",
     "model_config.path_trained_model = path_trained_model"
    ]
   },
@@ -759,7 +761,7 @@
    },
    "outputs": [],
    "source": [
-    "trainer.predict(tokenized_datasets[\"test\"])"
+    "predictions = trainer.predict(tokenized_datasets[\"test\"])"
    ]
   },
   {
