--- a/Transformer_SeqClass_HyperParamSearch-French.ipynb
+++ b/Transformer_SeqClass_HyperParamSearch-French.ipynb
@@ -121,11 +121,20 @@
     "\n",
     "\n",
     "\"\"\"\n",
-    "Base BERT model to be used during finetuning.\n",
-    "This has to be picked from the pre-trained models on HuggingFace\n",
-    "in order to be compatible with the Trainer API\n",
+    "CamemBERT\n",
+    "-original code: https://camembert-model.fr\n",
+    "-https://arxiv.org/abs/1911.03894\n",
+    "-HF: https://huggingface.co/almanach/camembert-base\n",
+    "-name: camembert-base\n",
+    "\n",
+    "FlauBERT\n",
+    "-original code: https://github.com/getalp/Flaubert\n",
+    "-https://arxiv.org/abs/1912.05372\n",
+    "-HF: https://huggingface.co/flaubert/flaubert_base_uncased\n",
+    "-name: flaubert/flaubert_base_cased , flaubert/flaubert_base_uncased\n",
+    "-note: need to install sacremoses\n",
     "\"\"\"\n",
-    "_base_model = \"camembert-base\"\n",
+    "_base_model = \"flaubert/flaubert_base_cased\"\n",
     "# for saving name in model config we need to make sure that there is no '/' in _base_model\n",
     "_base_model_altered = re.sub(r'/', '___', _base_model)\n",
     "\n",
@@ -179,7 +188,7 @@
     "\"\"\"\n",
     "Number of trials to run during hyperparameter search.\n",
     "\"\"\"\n",
-    "_no_trials = 4\n",
+    "_no_trials = 2\n",
     "\n",
     "\"\"\"\n",
     "Employ freezing of layers, options:\n",
