--- a/Transformer_SeqClass_HyperParamSearch-German.ipynb
+++ b/Transformer_SeqClass_HyperParamSearch-German.ipynb
@@ -121,11 +121,19 @@
     "\n",
     "\n",
     "\"\"\"\n",
-    "Base BERT model to be used during finetuning.\n",
-    "This has to be picked from the pre-trained models on HuggingFace\n",
-    "in order to be compatible with the Trainer API\n",
+    "German BERT by deepset\n",
+    "-https://www.deepset.ai/german-bert\n",
+    "- no paper found\n",
+    "-HF: https://huggingface.co/bert-base-german-cased\n",
+    "-name: bert-base-german-cased\n",
+    "\n",
+    "German BERT by dmbdz\n",
+    "- git: https://github.com/dbmdz/berts\n",
+    "- no paper found\n",
+    "-HF: https://huggingface.co/dbmdz/bert-base-german-uncased\n",
+    "-name: bert-base-german-dbmdz-cased , bert-base-german-dbmdz-uncased\n",
     "\"\"\"\n",
-    "_base_model = \"camembert-base\"\n",
+    "_base_model = \"bert-base-german-cased\"\n",
     "# for saving name in model config we need to make sure that there is no '/' in _base_model\n",
     "_base_model_altered = re.sub(r'/', '___', _base_model)\n",
     "\n",
@@ -179,7 +187,7 @@
     "\"\"\"\n",
     "Number of trials to run during hyperparameter search.\n",
     "\"\"\"\n",
-    "_no_trials = 4\n",
+    "_no_trials = 2\n",
     "\n",
     "\"\"\"\n",
     "Employ freezing of layers, options:\n",
@@ -198,12 +206,12 @@
     "\"\"\"\n",
     "name of dataset on Hf-Hub\n",
     "\"\"\"\n",
-    "_dataset_name_hub = \"HalaJada/FinStmts_ConsUncons_French_SeqClass\"\n",
+    "_dataset_name_hub = \"HalaJada/FinStmts_ConsUncons_German_SeqClass\"\n",
     "\n",
     "\"\"\"\n",
     "name of dataset to name model_config\n",
     "\"\"\"\n",
-    "_dataset_name = \"French_ConsUncons\" \n",
+    "_dataset_name = \"German_ConsUncons\" \n",
     "\n",
     "\"\"\"\n",
     "name of dataset to load and path to folder with local datasets\n",
