--- a/Transformer_SeqClass_HyperParamSearch-MultiLing.ipynb
+++ b/Transformer_SeqClass_HyperParamSearch-MultiLing.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "executionInfo": {
      "elapsed": 13747,
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "metadata": {
     "executionInfo": {
      "elapsed": 17,
@@ -121,11 +121,21 @@
     "\n",
     "\n",
     "\"\"\"\n",
-    "Base BERT model to be used during finetuning.\n",
-    "This has to be picked from the pre-trained models on HuggingFace\n",
-    "in order to be compatible with the Trainer API\n",
+    "XLM-RoBERTa (base-sized model)\n",
+    "-paper: https://arxiv.org/abs/1911.02116\n",
+    "-git: https://github.com/facebookresearch/fairseq/tree/main/examples/xlmr\n",
+    "-HF: https://huggingface.co/FacebookAI/xlm-roberta-base\n",
+    "-name: \"xlm-roberta-base\"\n",
+    "\n",
+    "BERT multilingual base model (cased)\n",
+    "- only original BERT paper found ...\n",
+    "- no repo found\n",
+    "-HF: https://huggingface.co/bert-base-multilingual-cased\n",
+    "-name: bert-base-multilingual-cased\n",
+    "\n",
+    "\n",
     "\"\"\"\n",
-    "_base_model = \"camembert-base\"\n",
+    "_base_model = \"xlm-roberta_base\"\n",
     "# for saving name in model config we need to make sure that there is no '/' in _base_model\n",
     "_base_model_altered = re.sub(r'/', '___', _base_model)\n",
     "\n",
@@ -198,12 +208,12 @@
     "\"\"\"\n",
     "name of dataset on Hf-Hub\n",
     "\"\"\"\n",
-    "_dataset_name_hub = \"HalaJada/FinStmts_ConsUncons_French_SeqClass\"\n",
+    "_dataset_name_hub = [\"HalaJada/FinStmts_ConsUncons_French_SeqClass\",\"HalaJada/FinStmts_ConsUncons_German_SeqClass\"]\n",
     "\n",
     "\"\"\"\n",
     "name of dataset to name model_config\n",
     "\"\"\"\n",
-    "_dataset_name = \"French_ConsUncons\" \n",
+    "_dataset_name = \"FrenchGerman_ConsUncons\" \n",
     "\n",
     "\"\"\"\n",
     "name of dataset to load and path to folder with local datasets\n",
@@ -250,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "metadata": {
     "executionInfo": {
      "elapsed": 16,
@@ -278,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
