Added performance metrics to both the final training and modelconfi files, added majority voting for segemented documents approach, tracking of training logs, fixed pathing issues -> machine independent

--- a/Transformer_SeqClass_HyperParamSearch.ipynb
+++ b/Transformer_SeqClass_HyperParamSearch.ipynb
@@ -127,12 +127,12 @@
     "\"\"\"\n",
     "_base_model = \"camembert-base\"\n",
     "# for saving name in model config we need to make sure that there is no '/' in _base_model\n",
-    "_base_model_altered = re.sub(r'/', '___', _base_model)\n",
+    "base_model_altered = re.sub(r'/', '___', _base_model)\n",
     "\n",
     "\"\"\"\n",
     "Directory Paths:\n",
     "\"\"\"\n",
-    "path_initial_training =  os.path.join(path_cwd , \"training_data\" , _base_model_altered, \"initial_training\" + \"_\" + timestamp)\n",
+    "path_initial_training =  os.path.join(\"training_data\" , base_model_altered, \"initial_training\" + \"_\" + timestamp)\n",
     "\n",
     "\"\"\"\n",
     "Three custom loss functions have been implemented:\n",
@@ -209,19 +209,24 @@
     "name of dataset to load and path to folder with local datasets\n",
     "\"\"\"\n",
     "_dataset_name_local = \"\"\n",
-    "path_dataset_local = os.path.join(path_cwd, \"datasets\" , _dataset_name_local)\n",
+    "path_dataset_local = os.path.join(\"datasets\" , _dataset_name_local)\n",
     "\n",
     "\"\"\"\n",
     "name of file with ModelConfig object\n",
     "path to folder with modelconfig\n",
     "\"\"\"\n",
-    "file_modelconfig = \"ModelConfig_\" + _base_model_altered + \"_\" + _dataset_name + \"_\" + timestamp + \".pkl\"\n",
-    "path_file_modelconfig = os.path.join(path_cwd, \"modelconfigs\", file_modelconfig)\n",
+    "file_modelconfig = \"ModelConfig_\" + base_model_altered + \"_\" + _dataset_name + \"_\" + timestamp + \".pkl\"\n",
+    "path_file_modelconfig = os.path.join(\"modelconfigs\", file_modelconfig)\n",
     "\n",
     "\"\"\"\n",
     "save strategy during training\n",
     "\"\"\"\n",
-    "_save_strategy = \"no\""
+    "_save_strategy = \"no\"\n",
+    "\n",
+    "\"\"\"\n",
+    "flag majority voting, multi-segment approach\n",
+    "\"\"\"\n",
+    "_flag_mv = False"
    ]
   },
   {
@@ -266,7 +271,7 @@
    },
    "outputs": [],
    "source": [
-    "raw_datasets = util.load_data(_from_hub, _dataset_name_hub, path_dataset_local)"
+    "raw_datasets = util.load_data(_from_hub, _dataset_name_hub, os.path.join(path_cwd, path_dataset_local))"
    ]
   },
   {
@@ -461,7 +466,7 @@
     "Create instance of class TrainingArguments. Adjust to desired behaviour.\n",
     "\"\"\"\n",
     "training_args = TrainingArguments(\n",
-    "    output_dir = path_initial_training,\n",
+    "    output_dir = os.path.join(path_cwd, path_initial_training),\n",
     "    save_strategy = _save_strategy,\n",
     "    evaluation_strategy = \"epoch\",\n",
     "    logging_strategy = \"epoch\",\n",
@@ -1264,7 +1269,8 @@
     "                              no_trials = _no_trials,  \n",
     "                              frozen = _frozen,  \n",
     "                              path_initial_training = path_initial_training,\n",
-    "                              best_run = best_run)"
+    "                              best_run = best_run,\n",
+    "                              flag_mv = _flag_mv)"
    ]
   },
   {
@@ -1294,7 +1300,7 @@
    },
    "outputs": [],
    "source": [
-    "with open(path_file_modelconfig, 'wb') as f:\n",
+    "with open(os.path.join(path_cwd, path_file_modelconfig), 'wb') as f:\n",
     "    pickle.dump(model_config, f)"
    ]
   }
