--- a/Transformer_SeqClass_FinalTraining.ipynb
+++ b/Transformer_SeqClass_FinalTraining.ipynb
@@ -11,14 +11,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {
     "id": "BzaTHUtWcb4T"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
+    "import pandas as pd\n",
     "import os\n",
+    "import re\n",
     "\n",
     "\n",
     "from datasets import load_from_disk, load_metric, concatenate_datasets, DatasetDict, load_dataset\n",
@@ -32,16 +43,18 @@
     "     logging,\n",
     "     AdamW,\n",
     "     get_scheduler,\n",
-    "\n",
+    "     #TrainerCallback,\n",
     ")\n",
     "import torch\n",
     "from ray import tune, train\n",
     "import pickle\n",
     "from datetime import datetime\n",
+    "#from copy import deepcopy\n",
     "from sklearn.metrics import confusion_matrix\n",
     "import utility.utility as util\n",
     "import utility.CustomTrainer as ct\n",
     "import utility.ModelConfig as mc\n",
+    "#import utility.PerEpochEvalCallback as evalcb\n",
     "\n",
     "# turn off warnings\n",
     "#logging.set_verbosity_error()\n",
@@ -77,7 +90,7 @@
     "\"\"\"\n",
     "path to file with modelconfig\n",
     "\"\"\"\n",
-    "path_file_modelconfig = os.path.join(path_cwd, \"modelconfigs\", _name_config_file)"
+    "path_file_modelconfig = os.path.join(\"modelconfigs\", _name_config_file)"
    ]
   },
   {
@@ -87,7 +100,7 @@
    "outputs": [],
    "source": [
     "model_config = None\n",
-    "with open(path_file_modelconfig, \"rb\") as f:\n",
+    "with open(os.path.join(path_cwd, path_file_modelconfig), \"rb\") as f:\n",
     "    model_config = pickle.load(f)"
    ]
   },
@@ -137,7 +150,7 @@
     "\"\"\"\n",
     "Directory Paths:\n",
     "\"\"\"\n",
-    "path_final_training =  os.path.join(path_cwd , \"training_data\" , base_model_altered, \"final_training\" + \"_\" + timestamp)\n",
+    "path_final_training =  os.path.join(\"training_data\" , base_model_altered, \"final_training\" + \"_\" + timestamp)\n",
     "model_config.path_final_training = path_final_training\n",
     "\n",
     "\"\"\"\n",
@@ -202,7 +215,7 @@
     "\"\"\"\n",
     "path to folder with trained model\n",
     "\"\"\"\n",
-    "path_trained_model = os.path.join(path_cwd, \"trained_models\", base_model_altered + \"_\" + timestamp)\n",
+    "path_trained_model = os.path.join(\"trained_models\", base_model_altered + \"_\" + timestamp)\n",
     "model_config.path_trained_model = path_trained_model"
    ]
   },
@@ -252,7 +265,7 @@
    },
    "outputs": [],
    "source": [
-    "raw_datasets = util.load_data(from_hub, dataset_name_hub, path_dataset_local)"
+    "raw_datasets = util.load_data(from_hub, dataset_name_hub, os.path.join(path_cwd, path_dataset_local))"
    ]
   },
   {
@@ -462,7 +475,7 @@
     "Create instance of class TrainingArguments. Adjust to desired behaviour.\n",
     "\"\"\"\n",
     "training_args = TrainingArguments(\n",
-    "    output_dir = path_final_training,\n",
+    "    output_dir = os.path.join(path_cwd, path_final_training),\n",
     "    save_strategy = \"epoch\",\n",
     "    evaluation_strategy = \"epoch\",\n",
     "    logging_strategy = \"epoch\",\n",
@@ -620,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -652,7 +665,19 @@
     "id": "YvWoN2ipR71V",
     "outputId": "4be3659d-651d-4794-f8ca-cf758580202c"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'loss_fct' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[11], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m trainer \u001b[38;5;241m=\u001b[39m ct\u001b[38;5;241m.\u001b[39mCustomTrainer(\n\u001b[1;32m----> 2\u001b[0m     type_loss \u001b[38;5;241m=\u001b[39m \u001b[43mloss_fct\u001b[49m,\n\u001b[0;32m      3\u001b[0m     model_init \u001b[38;5;241m=\u001b[39m model_inits[frozen],\n\u001b[0;32m      4\u001b[0m     class_weights \u001b[38;5;241m=\u001b[39m class_weights,\n\u001b[0;32m      5\u001b[0m     args \u001b[38;5;241m=\u001b[39m training_args,\n\u001b[0;32m      6\u001b[0m     train_dataset\u001b[38;5;241m=\u001b[39mtokenized_datasets[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtrain_val\u001b[39m\u001b[38;5;124m\"\u001b[39m],\n\u001b[0;32m      7\u001b[0m     eval_dataset\u001b[38;5;241m=\u001b[39mtokenized_datasets[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtest\u001b[39m\u001b[38;5;124m\"\u001b[39m],\n\u001b[0;32m      8\u001b[0m     data_collator\u001b[38;5;241m=\u001b[39mdata_collator,\n\u001b[0;32m      9\u001b[0m     tokenizer\u001b[38;5;241m=\u001b[39mtokenizer,\n\u001b[0;32m     10\u001b[0m     compute_metrics \u001b[38;5;241m=\u001b[39m compute_metrics,\n\u001b[0;32m     11\u001b[0m )\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'loss_fct' is not defined"
+     ]
+    }
+   ],
    "source": [
     "trainer = ct.CustomTrainer(\n",
     "    type_loss = loss_fct,\n",
@@ -746,29 +771,26 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "YSSpvaa3qhQS"
-   },
+   "metadata": {},
    "source": [
-    "# Measure Performance on Test-Set"
+    "# DataFrame with Training Metrics per Epoch"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "SZBSQpC-qcv0"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "predictions = trainer.predict(tokenized_datasets[\"test\"])"
+    "log_df = util.process_log_history(trainer.state.log_history, trainer.args.num_train_epochs)\n",
+    "model_config.training_log_df = log_df"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Example Confusion Matrix"
+    "# Model predictions on test data"
    ]
   },
   {
@@ -777,7 +799,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pred_labels = np.argmax(predictions.predictions, axis=1)"
+    "predictions = trainer.predict(tokenized_datasets[\"test\"])\n",
+    "model_config.predictions = predictions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "YSSpvaa3qhQS"
+   },
+   "source": [
+    "# Performance on Test-Set and Confusion Matrix"
    ]
   },
   {
@@ -795,7 +827,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "conf_mat = confusion_matrix(true_labels, pred_labels)\n",
+    "predicted_labels = np.argmax(predictions.predictions, axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results = clf_metrics.compute(true_labels, predicted_labels)\n",
+    "model_config.evaluation_results = results\n",
+    "results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conf_mat = confusion_matrix(true_labels, predicted_labels)\n",
+    "model_config.confusion_matrix = conf_mat\n",
     "conf_mat"
    ]
   },
@@ -806,6 +859,50 @@
    "outputs": [],
    "source": [
     "tn, fp, fn, tp = conf_mat.ravel()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Majority Voting (if applicable)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results_mv = None\n",
+    "conf_mat_mv = None\n",
+    "if model_config.flag_mv:\n",
+    "    test_df = raw_datasets[\"test\"].to_pandas()\n",
+    "    performance_mv = util.simple_majority_voting(test_df, predictions, \"original_id\", \"text\", \"id\")\n",
+    "    true_labels_mv = performance_mv[\"label\"]\n",
+    "    predicted_labels_mv = performance_mv[\"mv_logits_label\"]\n",
+    "    results_mv = clf_metrics.compute(true_labels_mv, predicted_labels_mv)\n",
+    "    conf_mat_mv = confusion_matrix(true_labels_mv, predicted_labels_mv)\n",
+    "model_config.evaluation_results_mv = results_mv\n",
+    "model_config.confusion_matrix_mv = conf_mat_mv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results_mv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conf_mat_mv"
    ]
   },
   {
@@ -825,7 +922,7 @@
    },
    "outputs": [],
    "source": [
-    "trainer.save_model(path_trained_model)"
+    "trainer.save_model(os.path.join(path_cwd, path_trained_model))"
    ]
   },
   {
@@ -841,7 +938,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(path_file_modelconfig, 'wb') as f:\n",
+    "with open(os.path.join(path_cwd, path_file_modelconfig), 'wb') as f:\n",
     "    pickle.dump(model_config, f)"
    ]
   }
