--- a/ModelConfig_Reader.ipynb
+++ b/ModelConfig_Reader.ipynb
@@ -486,24 +486,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 107,
    "id": "d3ef9dd3-b2d4-49d3-8b7c-5aeb2a24eabe",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "'NoneType' object is not subscriptable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[102], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mmodel_config\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtraining_log_df\u001b[49m\u001b[43m[\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mloss\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43meval_loss\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43meval_matthews_correlation\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m]\u001b[49m\u001b[38;5;241m.\u001b[39mplot()\n\u001b[0;32m      2\u001b[0m model_config\u001b[38;5;241m.\u001b[39mtraining_log_df\n",
-      "\u001b[1;31mTypeError\u001b[0m: 'NoneType' object is not subscriptable"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "model_config.training_log_df[[\"loss\", \"eval_loss\", \"eval_matthews_correlation\"]].plot()\n",
+    "if model_config.training_log_df:\n",
+    "    model_config.training_log_df[[\"loss\", \"eval_loss\", \"eval_matthews_correlation\"]].plot()\n",
     "model_config.training_log_df"
    ]
   },
