start-stop mechanic for hps, logging of trials and final training, added custom callback, folder for sqlite dbs for hps, extended model config reader

--- a/Transformer_SeqClass_FinalTraining.ipynb
+++ b/Transformer_SeqClass_FinalTraining.ipynb
@@ -43,7 +43,7 @@
     "     logging,\n",
     "     AdamW,\n",
     "     get_scheduler,\n",
-    "     #TrainerCallback,\n",
+    "     TrainerCallback,\n",
     ")\n",
     "import torch\n",
     "from ray import tune, train\n",
@@ -62,6 +62,25 @@
     "# resets import once changes have been applied\n",
     "%load_ext autoreload\n",
     "%autoreload 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Disable TQDM, for output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "disable tqdm\n",
+    "\"\"\"\n",
+    "_disable_tqdm = False"
    ]
   },
   {
@@ -479,6 +498,7 @@
     "    save_strategy = \"epoch\",\n",
     "    evaluation_strategy = \"epoch\",\n",
     "    logging_strategy = \"epoch\",\n",
+    "    disable_tqdm = _disable_tqdm,\n",
     "    **model_config.best_run.hyperparameters,\n",
     "    )"
    ]
@@ -853,15 +873,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tn, fp, fn, tp = conf_mat.ravel()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -878,7 +889,7 @@
     "conf_mat_mv = None\n",
     "if model_config.flag_mv:\n",
     "    test_df = raw_datasets[\"test\"].to_pandas()\n",
-    "    performance_mv = util.simple_majority_voting(test_df, predictions, \"original_id\", \"text\", \"id\")\n",
+    "    performance_mv = util.simple_majority_voting(test_df, predictions, \"original_id\", \"text\", \"id\", \"label\")\n",
     "    true_labels_mv = performance_mv[\"label\"]\n",
     "    predicted_labels_mv = performance_mv[\"mv_logits_label\"]\n",
     "    results_mv = clf_metrics.compute(true_labels_mv, predicted_labels_mv)\n",
