--- a/Transformer_SeqClass_HyperParamSearch.ipynb
+++ b/Transformer_SeqClass_HyperParamSearch.ipynb
@@ -28,6 +28,7 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
+    "import pandas as pd\n",
     "import os\n",
     "import re\n",
     "\n",
@@ -53,10 +54,12 @@
     "import torch\n",
     "from ray import tune, train\n",
     "import pickle\n",
+    "import optuna\n",
     "from datetime import datetime\n",
     "import utility.utility as util\n",
     "import utility.CustomTrainer as ct\n",
     "import utility.ModelConfig as mc\n",
+    "import utility.CustomCallback as cb\n",
     "\n",
     "# turn off warnings\n",
     "#logging.set_verbosity_error()\n",
@@ -68,16 +71,246 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# CWD Path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "path to local\n",
+    "\"\"\"\n",
+    "path_cwd = os.getcwd()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Disable TQDM, for output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "disable tqdm\n",
+    "\"\"\"\n",
+    "_disable_tqdm = False"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Checkpoint Save Strategy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "save checkpoints during training, requires a lot of disk space\n",
+    "\"\"\"\n",
+    "_save_strategy = \"no\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# First Run or Restart of HPS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# flag whether first run or continued study\n",
+    "_flag_first_run = True\n",
+    "\n",
+    "# modelconfig file name\n",
+    "_name_config_file = \"\"\n",
+    "\n",
+    "# path to model_config\n",
+    "path_file_modelconfig = os.path.join(\"modelconfigs\", _name_config_file)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Load ModelConfig, if not first run"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ss\n"
+     ]
+    }
+   ],
+   "source": [
+    "model_config = None\n",
+    "if not _flag_first_run:\n",
+    "    with open(os.path.join(path_cwd, path_file_modelconfig), \"rb\") as f:\n",
+    "        model_config = pickle.load(f)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Configuration"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "description of downstream task you want to train you model on\n",
+    "\"\"\"\n",
+    "_task = \"Binary Classification _ with study object and hps log history\"\n",
+    "if not _flag_first_run:\n",
+    "    _task = model_config.task\n",
+    "\n",
+    "\"\"\"\n",
+    "Base BERT model to be used during finetuning.\n",
+    "This has to be picked from the pre-trained models on HuggingFace\n",
+    "in order to be compatible with the Trainer API\n",
+    "\"\"\"\n",
+    "_base_model = \"roberta-base\"\n",
+    "if not _flag_first_run:\n",
+    "    _base_model = model_config.base_model\n",
+    "\n",
+    "\"\"\"\n",
+    "Three custom loss functions have been implemented:\n",
+    "  f1: soft-f1 macro score\n",
+    "  mcc: soft-mcc\n",
+    "  wce: weighted cross entropy\n",
+    "  ce: standard cross entropy\n",
+    "\"\"\"\n",
+    "_loss_fct = \"ce\"\n",
+    "if not _flag_first_run:\n",
+    "    _loss_fct = model_config.loss_fct\n",
+    "    \n",
+    "\"\"\"\n",
+    "weighting scheme, only relevant when weighted-cross-entropy or other weighted losses are used\n",
+    "\"\"\"\n",
+    "_weight_scheme = \"rev_prop\"\n",
+    "if not _flag_first_run:\n",
+    "    _weight_scheme = model_config.weight_scheme\n",
+    "  \n",
+    "\n",
+    "\"\"\"\n",
+    "Metrics listed during evaluation:\n",
+    "\n",
+    "Note: adjust with desired metrics.\n",
+    "\"\"\"\n",
+    "_eval_metrics = [\"accuracy\", \"precision\", \"recall\", \"f1\", \"matthews_correlation\"]\n",
+    "if not _flag_first_run:\n",
+    "    _eval_metrics = model_config.eval_metrics\n",
+    "  \n",
+    "\n",
+    "\"\"\"\n",
+    "Specify which metric should be maximized/minimized during hyperparameter-search\n",
+    "Options:\n",
+    "- eval_matthews_correlation\n",
+    "- eval_f1\n",
+    "- eval_loss\n",
+    "- any other metric passed to the compute_metrics function\n",
+    "\n",
+    "also specify direction: \"maximize\"/\"minimize\"\n",
+    "\"\"\"\n",
+    "_metric_best_model = \"eval_matthews_correlation\"\n",
+    "if not _flag_first_run:\n",
+    "    _metric_best_model = model_config.metric_best_model\n",
+    "    \n",
+    "_metric_direction = \"maximize\"\n",
+    "if not _flag_first_run:\n",
+    "    _metric_direction = model_config.metric_direction\n",
+    "\n",
+    "\"\"\"\n",
+    "Number of trials to run during this run of hyperparameter search.\n",
+    "\"\"\"\n",
+    "_no_trials = 2\n",
+    "\n",
+    "\"\"\"\n",
+    "Employ freezing of layers, options:\n",
+    "\"unfrozen\": all layers unfrozen\n",
+    "\"frozen\": all transformer layers frozen\n",
+    "\"\"\"\n",
+    "_frozen = \"unfrozen\"\n",
+    "if not _flag_first_run:\n",
+    "    _frozen = model_config.frozen\n",
+    "\n",
+    "\"\"\"\n",
+    "location of dataset\n",
+    "\"hub\": HuggingFace Hub\n",
+    "\"local\": Local directory\n",
+    "\"\"\"\n",
+    "_from_hub = True\n",
+    "if not _flag_first_run:\n",
+    "    _from_hub = model_config.from_hub\n",
+    "\n",
+    "\"\"\"\n",
+    "name of dataset on Hf-Hub\n",
+    "\"\"\"\n",
+    "_dataset_name_hub = \"HalaJada/FinStmts_ConsUncons_Sliding_English_SeqClass\"\n",
+    "if not _flag_first_run:\n",
+    "    _dataset_name_hub = model_config.dataset_name_hub\n",
+    "\n",
+    "\"\"\"\n",
+    "name of local dataset\n",
+    "\"\"\"\n",
+    "_dataset_name_local = \"\"\n",
+    "if not _flag_first_run:\n",
+    "    _dataset_name_local = model_config.dataset_name_local\n",
+    "    \n",
+    "\"\"\"\n",
+    "flag majority voting, multi-segment approach\n",
+    "\"\"\"\n",
+    "_flag_mv = False\n",
+    "if not _flag_first_run:\n",
+    "    _flag_mv = model_config.flag_mv\n",
+    "\n",
+    "\"\"\"\n",
+    "hps study name\n",
+    "\"\"\"\n",
+    "_study_name = \"test\"\n",
+    "if not _flag_first_run:\n",
+    "    _study_name = model_config.study_name"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "id": "IrZ91MToIwEf"
    },
    "source": [
-    "# Meta Variables\n",
-    "- base model\n",
-    "- loss function\n",
-    "- evaluation metrics\n",
-    "- best model metric\n",
-    "- number of trials\n"
+    "# Set Global/Meta Variables"
    ]
   },
   {
@@ -102,32 +335,19 @@
     "timestamp\n",
     "\"\"\"\n",
     "timestamp = datetime.now().strftime(\"%d_%m_%y_%H_%M\")\n",
+    "if not _flag_first_run:\n",
+    "    timestamp = model_config.timestamp_initial\n",
     "\n",
     "\"\"\"\n",
-    "downstream task\n",
+    "some model contain '/' characters which create issues with file and directory pathing, we replace them with '__' only for naming purposes\n",
     "\"\"\"\n",
-    "_task = \"Binary Classification\"\n",
-    "\n",
-    "\"\"\"\n",
-    "number of labels, set later\n",
-    "\n",
-    "\"\"\"\n",
-    "num_labels = None\n",
-    "\n",
-    "\"\"\"\n",
-    "path to local\n",
-    "\"\"\"\n",
-    "path_cwd = os.getcwd()\n",
-    "\n",
-    "\n",
-    "\"\"\"\n",
-    "Base BERT model to be used during finetuning.\n",
-    "This has to be picked from the pre-trained models on HuggingFace\n",
-    "in order to be compatible with the Trainer API\n",
-    "\"\"\"\n",
-    "_base_model = \"camembert-base\"\n",
     "# for saving name in model config we need to make sure that there is no '/' in _base_model\n",
     "base_model_altered = re.sub(r'/', '___', _base_model)\n",
+    "\n",
+    "\"\"\"\n",
+    "name of dataset to name model_config\n",
+    "\"\"\"\n",
+    "dataset_name = re.sub(r'/', '_',_dataset_name_hub) if _from_hub else _dataset_name_local\n",
     "\n",
     "\"\"\"\n",
     "Directory Paths:\n",
@@ -135,98 +355,26 @@
     "path_initial_training =  os.path.join(\"training_data\" , base_model_altered, \"initial_training\" + \"_\" + timestamp)\n",
     "\n",
     "\"\"\"\n",
-    "Three custom loss functions have been implemented:\n",
-    "  f1: soft-f1 macro score\n",
-    "  mcc: soft-mcc\n",
-    "  wce: weighted cross entropy\n",
-    "  ce: standard cross entropy\n",
-    "\"\"\"\n",
-    "_loss_fct = \"wce\"\n",
-    "\n",
-    "\"\"\"\n",
-    "weighting scheme\n",
-    "\"\"\"\n",
-    "_weight_scheme = \"rev_prop\"\n",
-    "\n",
-    "\"\"\"\n",
     "Select weighting method when using weighted cost functions.\n",
     "\"\"\"\n",
     "class_weighting_schemes = {\"rev_prop\": util.get_reverse_prop_class_weights}\n",
     "\n",
     "\"\"\"\n",
-    "class weights for weighted loss function\n",
-    "note: order is [weight for class 0, weight for class 1]\n",
+    "path to folder with local datasets\n",
     "\"\"\"\n",
-    "class_weights = [1,1]\n",
-    "\n",
-    "\"\"\"\n",
-    "Metrics listed during evaluation:\n",
-    "\n",
-    "Note: adjust with desired metrics.\n",
-    "\"\"\"\n",
-    "_eval_metrics = [\"accuracy\", \"precision\", \"recall\", \"f1\", \"matthews_correlation\"]\n",
-    "\n",
-    "\"\"\"\n",
-    "Specify which metric should be maximized during hyperparameter-search\n",
-    "Options:\n",
-    "- eval_matthews_correlation\n",
-    "- eval_f1\n",
-    "- eval_loss\n",
-    "- any other metric passed to the compute_metrics function\n",
-    "\"\"\"\n",
-    "_metric_best_model = \"eval_matthews_correlation\"\n",
-    "\n",
-    "\"\"\"\n",
-    "Number of trials to run during hyperparameter search.\n",
-    "\"\"\"\n",
-    "_no_trials = 4\n",
-    "\n",
-    "\"\"\"\n",
-    "Employ freezing of layers, options:\n",
-    "\"unfrozen\": all layers unfrozen\n",
-    "\"frozen\": all transformer layers frozen\n",
-    "\"\"\"\n",
-    "_frozen = \"unfrozen\"\n",
-    "\n",
-    "\"\"\"\n",
-    "location of dataset\n",
-    "\"hub\": HuggingFace Hub\n",
-    "\"local\": Local directory\n",
-    "\"\"\"\n",
-    "_from_hub = True\n",
-    "\n",
-    "\"\"\"\n",
-    "name of dataset on Hf-Hub\n",
-    "\"\"\"\n",
-    "_dataset_name_hub = \"HalaJada/FinStmts_ConsUncons_French_SeqClass\"\n",
-    "\n",
-    "\"\"\"\n",
-    "name of dataset to name model_config\n",
-    "\"\"\"\n",
-    "_dataset_name = \"French_ConsUncons\" \n",
-    "\n",
-    "\"\"\"\n",
-    "name of dataset to load and path to folder with local datasets\n",
-    "\"\"\"\n",
-    "_dataset_name_local = \"\"\n",
     "path_dataset_local = os.path.join(\"datasets\" , _dataset_name_local)\n",
     "\n",
     "\"\"\"\n",
     "name of file with ModelConfig object\n",
     "path to folder with modelconfig\n",
     "\"\"\"\n",
-    "file_modelconfig = \"ModelConfig_\" + base_model_altered + \"_\" + _dataset_name + \"_\" + timestamp + \".pkl\"\n",
+    "file_modelconfig = \"ModelConfig_\" + base_model_altered + \"_\" + dataset_name + \"_\" + timestamp + \".pkl\"\n",
     "path_file_modelconfig = os.path.join(\"modelconfigs\", file_modelconfig)\n",
     "\n",
     "\"\"\"\n",
-    "save strategy during training\n",
+    "path to sqlite database with the optuna study parameters\n",
     "\"\"\"\n",
-    "_save_strategy = \"no\"\n",
-    "\n",
-    "\"\"\"\n",
-    "flag majority voting, multi-segment approach\n",
-    "\"\"\"\n",
-    "_flag_mv = False"
+    "path_study_db = os.path.join(\"study_dbs\", _study_name + \"_\" + base_model_altered + \"_\" + dataset_name + \"_\" + timestamp + \".db\")"
    ]
   },
   {
@@ -303,7 +451,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class_weights = class_weighting_schemes[_weight_scheme](raw_datasets)"
+    "class_weights = class_weighting_schemes[_weight_scheme](raw_datasets)\n",
+    "if not _flag_first_run:\n",
+    "    class_weights = model_config.class_weights"
    ]
   },
   {
@@ -471,6 +621,7 @@
     "    evaluation_strategy = \"epoch\",\n",
     "    logging_strategy = \"epoch\",\n",
     "    metric_for_best_model = _metric_best_model,\n",
+    "    disable_tqdm = _disable_tqdm,\n",
     "    )"
    ]
   },
@@ -641,6 +792,23 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Create and Add Callback to save training logs after each hyperparameter trial"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "callback = cb.CustomCallback(trainer)\n",
+    "trainer.add_callback(callback)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "id": "jJ7ygag4SIFV"
    },
@@ -755,7 +923,7 @@
     "  return {\n",
     "        \"learning_rate\": trial.suggest_float(\"learning_rate\", 1e-6, 1e-4, log=True),\n",
     "        \"per_device_train_batch_size\": trial.suggest_categorical(\"per_device_train_batch_size\", [8, 16]),\n",
-    "        \"num_train_epochs\": trial.suggest_int(\"num_train_epochs\", 3, 8),\n",
+    "        \"num_train_epochs\": trial.suggest_int(\"num_train_epochs\", 2, 3),\n",
     "        \"weight_decay\": trial.suggest_float(\"weight_decay\", 1e-5, 1e-1),\n",
     "        \"warmup_ratio\": trial.suggest_float(\"warmup_ratio\", 0, 1e-1),\n",
     "    }"
@@ -1192,11 +1360,14 @@
    "source": [
     "# Run hyperparameter search\n",
     "best_run = trainer.hyperparameter_search(\n",
-    "    direction=\"maximize\",\n",
+    "    direction=_metric_direction,\n",
     "    backend=\"optuna\",\n",
     "    hp_space = optuna_hp_space,\n",
     "    n_trials = _no_trials,\n",
-    "    compute_objective = compute_objective\n",
+    "    compute_objective = compute_objective,\n",
+    "    study_name=_study_name,\n",
+    "    storage= \"sqlite:///\" + os.path.join(path_cwd, path_study_db),\n",
+    "    load_if_exists=True,\n",
     "    )"
    ]
   },
@@ -1241,6 +1412,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Process hps log history"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hps_log_df = util.process_hps_log_history(callbacks.all_log_history)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Create ModelConfig File"
    ]
   },
@@ -1250,7 +1437,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_config = mc.ModelConfig(timestamp = timestamp, \n",
+    "if _flag_first_run:\n",
+    "    model_config = mc.ModelConfig(timestamp = timestamp, \n",
     "                              base_model = _base_model, \n",
     "                              task = _task, \n",
     "                              loss_fct = _loss_fct, \n",
@@ -1264,13 +1452,21 @@
     "                              weight_scheme = _weight_scheme, \n",
     "                              class_weights = class_weights,\n",
     "                              eval_metrics = _eval_metrics,\n",
-    "                              metric_best_model = _metric_best_model,  \n",
+    "                              metric_best_model = _metric_best_model, \n",
+    "                              metric_direction = _metric_direction,\n",
     "                              \n",
     "                              no_trials = _no_trials,  \n",
     "                              frozen = _frozen,  \n",
     "                              path_initial_training = path_initial_training,\n",
     "                              best_run = best_run,\n",
-    "                              flag_mv = _flag_mv)"
+    "                              hps_log_df = hps_log_df,\n",
+    "                              flag_mv = _flag_mv,\n",
+    "                              study_name = _study_name,\n",
+    "                              path_study_db = path_study_db)\n",
+    "else:\n",
+    "    model_config.no_trials = model_config.no_trials + _no_trials\n",
+    "    model_config.best_run = best_run\n",
+    "    model_config.hps_log_df = util.merge_hps_log_histories(model_config.hps_log_df, hps_log_df)"
    ]
   },
   {
