added option to use pre-finetuned models for new classification tasks

--- a/Transformer_SeqClass_FinalTraining.ipynb
+++ b/Transformer_SeqClass_FinalTraining.ipynb
@@ -49,12 +49,10 @@
     "from ray import tune, train\n",
     "import pickle\n",
     "from datetime import datetime\n",
-    "#from copy import deepcopy\n",
     "from sklearn.metrics import confusion_matrix\n",
     "import utility.utility as util\n",
     "import utility.CustomTrainer as ct\n",
     "import utility.ModelConfig as mc\n",
-    "#import utility.PerEpochEvalCallback as evalcb\n",
     "\n",
     "# turn off warnings\n",
     "#logging.set_verbosity_error()\n",
@@ -165,6 +163,13 @@
     "base_model = model_config.base_model\n",
     "# for saving name in model config we need to make sure that there is no '/' in _base_model\n",
     "base_model_altered = re.sub(r'/', '___', base_model)\n",
+    "\n",
+    "\"\"\"\n",
+    "if the _base_model already has been finetuned on a different task \n",
+    "we need to reset its classification head to allow for different labels\n",
+    "and number of labels\n",
+    "\"\"\"\n",
+    "reset_model_head = model_config.reset_model_head\n",
     "\n",
     "\"\"\"\n",
     "Directory Paths:\n",
@@ -525,7 +530,7 @@
     "\"\"\"\n",
     "\n",
     "def model_init_frozen(freeze_layers):\n",
-    "  model = AutoModelForSequenceClassification.from_pretrained(base_model, num_labels=num_labels, return_dict=True)\n",
+    "  model = AutoModelForSequenceClassification.from_pretrained(base_model, num_labels=num_labels, return_dict=True, ignore_mismatched_sizes = reset_model_head)\n",
     "  for name, param in model.named_parameters():\n",
     "    # *conditional statement: currently all encoder layers are frozen\n",
     "    freeze_layers = [\"layer.\" + str(i) for i in range(11)]\n",
@@ -535,7 +540,7 @@
     "  return model\n",
     "\n",
     "def model_init():\n",
-    "  return AutoModelForSequenceClassification.from_pretrained(base_model, num_labels=num_labels, return_dict=True)\n",
+    "  return AutoModelForSequenceClassification.from_pretrained(base_model, num_labels=num_labels, return_dict=True, , ignore_mismatched_sizes = reset_model_head)\n",
     "\n",
     "model_inits = {\"unfrozen\": model_init, \"frozen\": model_init_frozen}"
    ]
