--- a/Transformer_SeqClass_HyperParamSearch.ipynb
+++ b/Transformer_SeqClass_HyperParamSearch.ipynb
@@ -104,7 +104,7 @@
     "\"\"\"\n",
     "disable tqdm\n",
     "\"\"\"\n",
-    "_disable_tqdm = False"
+    "_disable_tqdm = True"
    ]
   },
   {
@@ -204,6 +204,16 @@
     "_base_model = \"roberta-base\"\n",
     "if not _flag_first_run:\n",
     "    _base_model = model_config.base_model\n",
+    "\n",
+    "\"\"\"\n",
+    "if the _base_model already has been finetuned on a different task \n",
+    "we need to reset its classification head to allow for different labels\n",
+    "and number of labels\n",
+    "\"\"\"\n",
+    "_reset_model_head = False\n",
+    "if not _flag_first_run:\n",
+    "    _reset_model_head = model_config.reset_model_head\n",
+    "\n",
     "\n",
     "\"\"\"\n",
     "Three custom loss functions have been implemented:\n",
@@ -676,7 +686,7 @@
     "\n",
     "\n",
     "def model_init_frozen(freeze_layers):\n",
-    "  model = AutoModelForSequenceClassification.from_pretrained(_base_model, num_labels=num_labels, return_dict=True)\n",
+    "  model = AutoModelForSequenceClassification.from_pretrained(_base_model, num_labels=num_labels, return_dict=True, ignore_mismatched_sizes=_reset_model_head)\n",
     "  for name, param in model.named_parameters():\n",
     "    # *conditional statement: currently all encoder layers are frozen\n",
     "    freeze_layers = [\"layer.\" + str(i) for i in range(11)]\n",
@@ -686,7 +696,7 @@
     "  return model\n",
     "\n",
     "def model_init():\n",
-    "  return AutoModelForSequenceClassification.from_pretrained(_base_model, num_labels=num_labels, return_dict=True)\n"
+    "  return AutoModelForSequenceClassification.from_pretrained(_base_model, num_labels=num_labels, return_dict=True, ignore_mismatched_sizes = _reset_model_head)\n"
    ]
   },
   {
@@ -1440,6 +1450,7 @@
     "if _flag_first_run:\n",
     "    model_config = mc.ModelConfig(timestamp = timestamp, \n",
     "                              base_model = _base_model, \n",
+    "                              reset_model_head = _reset_model_head\n",
     "                              task = _task, \n",
     "                              loss_fct = _loss_fct, \n",
     "\n",
